Made changes to the game's required files
All of the required modules are now stored in canvas.lib.js
Updated a large portion of the library and commented each function
Since the main game has not been adapted to the new library structure it will not run at the moment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			body {
 				position: relative;
 				padding-top: 10px;
-				font-family: 'Arial';
+				font-family: Helvetica;
 				color: #f4f4f4;
 				background: #000;
 				margin-bottom: 64px;
@@ -23,8 +23,7 @@
 			</canvas>
 			<script type="text/javascript" src="three.min.js"></script>
 			<script src="http://mrdoob.github.com/three.js/examples/fonts/helvetiker_regular.typeface.js"></script>
-			<script type="text/javascript" src="canvas.utils.js"></script>
-			<script type="text/javascript" src="canvas.input.js"></script>
+			<script type="text/javascript" src="canvas.lib.js"></script>
 			<script type="text/javascript" src="canvas.game.js"></script>
 			<h2 class="centered">- Description -</h2>
 			<p class="centered">
